syntax = "proto3";

package internetofsports.blockchain.blockchain;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "blockchain/blockchain/params.proto";

option go_package = "github.com/InternetOfSports/blockchain/x/blockchain/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/InternetOfSports/blockchain/blockchain/params";
  
  }
  
  // Queries a list of GetTeam items.
  rpc GetTeam (QueryGetTeamRequest) returns (QueryGetTeamResponse) {
    option (google.api.http).get = "/InternetOfSports/blockchain/blockchain/get_team/{name}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetTeamRequest {
  string name = 1;
}

message QueryGetTeamResponse {
  string team = 1;
}

